--- a/pug/widgets/_widget-slider-03.pug
+++ b/pug/widgets/_widget-slider-03.pug
@@ -9,9 +9,7 @@
 				.widget-text
 					h4
 						strong
-							| Волонтеров берем на работу 
-							br
-							| в первую очередь
+							| Волонтеров берем на работу в первую очередь
 					p Выкса
 					p Сегодня 15:26
 		#widget3-tab2.tab-pane.widget-tab.widget-slider__tab
