--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -130,15 +130,18 @@
 				flex: 0 0 15.11%;
 				max-width: 15.11%;
 			}
+			@include md-block {
+				max-width: 80px;
+			}
 		}
 		&__search {
 			//padding: 0 15px;
 			width: 100%;
-			flex: 0 0 33.33333%;
-			max-width: 33.33333%;
+			flex: 0 0 30.33333%;
+			max-width: 30.33333%;
 			@include lg-block {
-				flex: 0 0 17.35%;
-				max-width: 17.35%;
+				flex: 0 0 14.35%;
+				max-width: 14.35%;
 			}
 			@include md-block {
 				display: none;
@@ -150,11 +153,11 @@
 			align-items: center;
 			//padding: 0 15px;
 			width: 100%;
-			flex: 0 0 25%;
-			max-width: 25%;
+			flex: 0 0 28%;
+			max-width: 28%;
 			@include lg-block {
-				flex: 0 0 28.81%;
-				max-width: 28.81%;
+				flex: 0 0 30.81%;
+				max-width: 30.81%;
 			}
 			@include xs-block {
 				padding-right: 15px;
@@ -234,6 +237,7 @@
 		}
 		@include md-block {
 			margin-left: -15px;
+			margin-bottom: 0;
 		}
 		@include sm-block {
 			margin-left: 0;
@@ -250,6 +254,10 @@
 				br {
 					display: none;
 				}
+			}
+			@include md-block {
+				font-size: 10px;
+				line-height: 1.25;
 			}
 			@include sm-block {
 				font-size: 8px;
