--- a/app/pug/cards/_cards-galery-slider-full.pug
+++ b/app/pug/cards/_cards-galery-slider-full.pug
@@ -13,5 +13,5 @@
 		include ../modules/_tag-box
 	include _card-full-slider
 
-	include ../modals/_modal-content-comments
+	//include ../modals/_modal-content-comments
 	
