--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -56,6 +56,7 @@ html(lang='ru')
 		script(src='jquery-ui-1.12.1.custom/jquery-ui.min.js')
 		script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
 		script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
+		script(src='jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js')
 		script(src='js/libs/jquery.dotdotdot.js')
 		// slick
 		script(src='slick/slick.min.js')
