--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -306,7 +306,7 @@ header.header
 				.header-info.info
 					.header-info__time.info-wrap.info__time 09:49
 					.header-info-wrap
-						.header-info__weather.info__weather Ясно, +26 С
+						.header-info__weather.info__weather Малооблачно, +26 С
 						.header-info__location.info__location Нижний новгород
 				.header-user.user
 					.header-user__box.user__box
@@ -326,7 +326,7 @@ header.header
 						button.button-burg.margin-left-20(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button', aria-haspopup='true', aria-expanded='false')
 							span
 		nav.header-nav-system
-			#header-nav.header-nav-system-wrap.collapse.show
+			#header-nav.header-nav-system-wrap.collapse.show.mobile-hide
 				.row.align-items-center
 					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
