--- a/app/pug/stylegide.pug
+++ b/app/pug/stylegide.pug
@@ -28,6 +28,7 @@ html(lang='ru')
 			include stylegide/_stylegide__buttons
 			include stylegide/_stylegide__progress
 			include stylegide/_stylegide__forms
+			include stylegide/_stylegide__forms_bootstrap
 			include stylegide/_stylegide__text
 			include stylegide/_stylegide__tables
 			include stylegide/_stylegide__icons
