--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -31,6 +31,7 @@
 @import 'general/_deafult.scss';
 @import 'general/_buttons.scss';
 @import 'general/_form.scss';
+@import 'general/form-bs';
 @import 'general/_modalMain.scss';
 
 // main style ---------------------------
