--- a/app/pug/modals/_modal.pug
+++ b/app/pug/modals/_modal.pug
@@ -1,6 +1,6 @@
-#modalImgBox.modal.fade.modalMain(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
+#modalImgBox.modal.fade.modal-main(tabindex='-1', role='dialog', aria-labelledby='modalImgBoxLabel', aria-hidden='true')
 	.modal-dialog.container(role='document')
 		.row
 			.col-xl-12
 				.modal-content
-					.modalMain__content
+					.modal-main__content
