--- a/app/sass/_header-scroll.scss
+++ b/app/sass/_header-scroll.scss
@@ -18,8 +18,8 @@
 			align-items: center;
 			&__logo {
 				@include minW('1230px') {
-					flex: 0 0 42.73%;
-					max-width: 42.73%;
+					flex: 0 0 39.73%;
+					max-width: 39.73%;
 				}
 			}
 			&__question {
@@ -31,15 +31,15 @@
 			}
 			&__search {
 				@include minW('1230px') {
-					flex: 0 0 17.35%;
-					max-width: 17.35%;
+					flex: 0 0 16.35%;
+					max-width: 16.35%;
 
 				}
 			}
 			&__info {
 				@include minW('1230px') {
-					flex: 0 0 28.81%;
-					max-width: 28.81%;
+					flex: 0 0 32.81%;
+					max-width: 32.81%;
 
 				}
 			}
@@ -60,6 +60,10 @@
 			border: none;
 			a {
 				font-size: 12px;
+				@include md-block {
+					font-size: 10px;
+					line-height: 1.25;
+				}
 
 			}
 			br {
@@ -93,6 +97,7 @@
 			padding-top: 0;
 			&-wrap {
 				margin-left: 15px;
+				min-width: 105px;
 			}
 			&__time {
 				font-size: 22px;
