--- a/app/sass/general/_modalMain.scss
+++ b/app/sass/general/_modalMain.scss
@@ -1,5 +1,5 @@
 .modal-backdrop.show {opacity: 0.7;}
-.modalMain {
+.modal-main {
 	&-preload {
 		.modal-dialog {
 			max-height: 750px;
@@ -29,9 +29,40 @@
 		&-backdrop {
 
 		}
+		&-video {
+			iframe {
+				width: 100%;
+				height: 700px;
+				border: none !important;
+				outline: none !important;
+				@include lg-block {
+					height: 600px;
+				}
+				@include md-block {
+					height: 325px;
+				}
+				@include xs-block {
+					height: 183px;
+				}
+			}
+		}
 	}
 	&__content {
 		text-align: center;
+	}
+	&-contents {
+		.modal-dialog {
+			@include xs-block {
+				margin: 80px 0;
+			}
+
+		}
+		&-open {
+			.modal-backdrop {
+				//background-color: #707070;
+				//opacity: 1;
+			}
+		}
 	}
 	&-slider {
 
@@ -39,6 +70,11 @@
 			padding: 0 30px;
 			@include md-block {
 				padding: 0 15px;
+			}
+			&_bottom {
+				@include sm-block {
+					display: none;
+				}
 			}
 		}
 		&__item {
@@ -63,29 +99,38 @@
 			// width: 20px;
 			&__left {
 				left: 0;
+				@include xs-block {
+					left: 0;
+				}
 			}
 			&__right {
 				right: 0;
+				@include xs-block {
+					right: 0;
+				}
 			}
 		}
 		&-title {
+			@include sm-block {
+				display: none;
+			}
 			.post-info {
 				display: block;
 			}
 		}
 		&-bottom {
-			.modalMain-slider-wrap {
+			.modal-main-slider-wrap {
 				padding: 0 25px;
 			}
-			.modalMain-slider__item {
+			.modal-main-slider__item {
 				padding: 0 5px;
 			}
 			.slick-current.slick-active {
-				.modalMain-slider__imgbox {
+				.modal-main-slider__imgbox {
 					border: 3px solid #d0d1d3;
 				}
 			}
-			.modalMain-slider__imgbox {
+			.modal-main-slider__imgbox {
 				height: 100px;
 				max-width: 150px;
 				overflow: hidden;
