--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1493,6 +1493,15 @@ h2 span,
   text-decoration: none;
 }
 
+.page-link {
+  color: #5e6167;
+}
+
+.page-link:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .button {
   display: inline-block;
   padding: 3px 5px 4px 5px;
@@ -8185,6 +8194,10 @@ select.form-control:not([size]):not([multiple]) {
   .link-search:hover {
     text-decoration: underline;
     color: #00501d;
+  }
+
+  .page-link:hover {
+    color: #5e6167;
   }
 
   .button:hover {
