--- a/app/pug/stylegide/_stylegide__buttons.pug
+++ b/app/pug/stylegide/_stylegide__buttons.pug
@@ -148,5 +148,23 @@ mixin radioButton($n)
 												option(value='1') One
 												option(value='2') Two
 												option(value='3') Three
-
+	.row
+		.col-12
+			.card
+				nav(aria-label='Page navigation example')
+				ul.pagination
+					li.page-item
+						a.page-link(href='#', aria-label='Previous')
+							span(aria-hidden='true') «
+							span.sr-only Previous
+					li.page-item
+						a.page-link(href='#') 1
+					li.page-item
+						a.page-link(href='#') 2
+					li.page-item
+						a.page-link(href='#') 3
+					li.page-item
+						a.page-link(href='#', aria-label='Next')
+							span(aria-hidden='true') »
+							span.sr-only Next
 
