--- a/app/pug/ads.pug
+++ b/app/pug/ads.pug
@@ -30,7 +30,7 @@ block vars
 							p
 			.col-12.col-sm-9
 				.card
-					.card__text.fix-height-135.text-ddd-135
+					.card__text.text-ddd-135
 						p <strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;
 							a.link-deafult(href="mailto:/contact@omk.ru") contact@omk.ru
 						p
