--- a/app/pug/all-pages.pug
+++ b/app/pug/all-pages.pug
@@ -36,7 +36,7 @@ html(lang='ru')
 	- items.push({title: 'Результаты поиска', link: 'search-result.html'});
 	- items.push({title: 'Текст', link: 'text.html'});
 	- items.push({title: 'Текст + Изображение', link: 'blocks.html'});
-	- items.push({title: 'Форма, логотипы, документы', link: 'blocks.html'});
+	- items.push({title: 'Форма, логотипы, документы', link: 'others.html'});
 	- items.push({title: 'Таблицы', link: 'tables.html'});
 	- items.push({title: 'Спойлер, контент-слайдер', link: 'spoyler.html'});
 	- items.push({title: 'Модули блогов, доска почета', link: 'blocks.html'});
