--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -54,7 +54,7 @@ html(lang='ru')
 		script(src='js/libs/jquery.min.js')
 		// jQuery-UI
 		script(src='jquery-ui-1.12.1.custom/jquery-ui.min.js')
-		//script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
+		script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')
 		//script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
 		script(src='jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js')
 		script(src='js/libs/jquery.dotdotdot.js')
