--- a/app/pug/search-result.pug
+++ b/app/pug/search-result.pug
@@ -37,7 +37,7 @@ block content
 						p
 		.col-12.col-sm-8
 			.card
-				.content-text.fix-height-210.text-ddd-210
+				.content-text.text-ddd-210
 					h3.margin-bottom-10
 						a(href="#") Интервью с Серафимович Александром про модернизацию новых разработок
 					.card-date.card-date_big.margin-bottom-10 11 Декабря 2018, 17:44
