--- a/app/pug/blocks/_block-min-imgl-text.pug
+++ b/app/pug/blocks/_block-min-imgl-text.pug
@@ -27,7 +27,7 @@
 					p
 	.col-xl-9
 		.card
-			.card__text.fix-height-135.text-ddd-135
+			.card__text.text-ddd-135
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 				p
@@ -43,7 +43,7 @@
 
 	.col-xl-9
 		.card
-			.card__text.fix-height-135.text-ddd-135
+			.card__text.text-ddd-135
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 				p
@@ -58,7 +58,7 @@
 					p
 	.col-xl-9
 		.card
-			.card__text.fix-height-135.text-ddd-135
+			.card__text.text-ddd-135
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 				a.button.card__more(href='#') Читать далее
