--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -145,7 +145,7 @@ block content
 						p
 		.col-12.col-sm-8
 			.card
-				.card__text.fix-height-210.text-ddd-210
+				.card__text.text-ddd-210
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 					p
@@ -159,7 +159,7 @@ block content
 						p
 		.col-12.col-sm-8
 			.card
-				.card__text.fix-height-210.text-ddd-210
+				.card__text.text-ddd-210
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 					p
