--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -319,14 +319,14 @@ header.header
 							i.icon-arrow-down
 					.header-button-inn.button-inn
 						button.header-button.button.button-help помощь
-						button#header-navControl.header-button.button.active(data-toggle='collapse', data-target='#header-nav') Системы
+						button#header-navControl.header-button.button(data-toggle='collapse', data-target='#header-nav') Системы
 						button#btnDeploy.header-button.button.button-deploy Развернуть
 						// <button id="btnToTop" class="header-button button button-toTop">Наверх</button>
 						// /.header-box
 						button.button-burg.margin-left-20(data-toggle='collapse', data-target='#menu-nav-headerGroup', type='button', aria-haspopup='true', aria-expanded='false')
 							span
 		nav.header-nav-system
-			#header-nav.header-nav-system-wrap.collapse.show.mobile-hide
+			#header-nav.header-nav-system-wrap.collapse.mobile-hide---
 				.row.align-items-center
 					.col-12.col-md-1
 						a.header-nav-system__item(href='#')
