--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -31,7 +31,7 @@ html(lang='ru')
 						.aside-wrap#aside
 							include _aside
 					.col-12.col-md-9
-						.content-group
+						.content-group#content
 							//- block vars
 							
 							block content
@@ -58,7 +58,6 @@ html(lang='ru')
 		//script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')
 		script(src='jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js')
 		script(src='js/libs/jquery.dotdotdot.js')
-		script(src='js/libs/sticky-kit.min.js')
 		// slick
 		script(src='slick/slick.min.js')
 		// Bootstrap
