--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -37,7 +37,7 @@ header.header
 										span Новости
 									button.button-split(data-toggle='collapse', data-target='#menu-nav-header-collapse-1', aria-expanded='false', aria-controls='menu-nav-header-collapse-1')
 										i.icon-arrow-down
-								ul#menu-nav-header-collapse-1.collapse.navbar-collapse.show(data-parent='#menu-nav-more')
+								ul#menu-nav-header-collapse-1.collapse.show(data-parent='#menu-nav-more')
 									li.nav-more-list__item.menu-nav__item.menu-nav-header__item
 										a.menu-nav__textbox.menu-nav-header__textbox(href= links.home)
 											.menu-nav__text.menu-nav-header__text НОВОСТИ ОМК
@@ -64,7 +64,7 @@ header.header
 										span КОМПАНИЯ
 									button.button-split(data-toggle='collapse', data-target='#menu-nav-header-collapse-2', aria-expanded='false', aria-controls='menu-nav-header-collapse-2')
 										i.icon-arrow-down
-								ul#menu-nav-header-collapse-2.collapse.navbar-collapse(data-parent='#menu-nav-more')
+								ul#menu-nav-header-collapse-2.collapse(data-parent='#menu-nav-more')
 									li.nav-more-list__item.menu-nav__item.menu-nav-header__item
 										a.menu-nav__textbox.menu-nav-header__textbox(href= links.structure)
 											.menu-nav__text.menu-nav-header__text Структура
