--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4377,6 +4377,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
 .card__content .tagbox {
@@ -4411,6 +4412,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
 .card__info_light .content-titlebox {
@@ -4686,6 +4688,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
 .card-third-slider__item {
@@ -5135,7 +5138,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .card-links__left {
   float: left;
-  width: 320px;
+  width: 305px;
 }
 
 .card-links__right {
@@ -5597,6 +5600,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
 .widget-imgbox__text h3 {
@@ -6479,6 +6483,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 65%);
   background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 65%);
   background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 65%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 }
 
 .comment-long__showbtn i {
@@ -6569,6 +6574,7 @@ select.form-control:not([size]):not([multiple]) {
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
   background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
   background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#eeefef',GradientType=0 );
 }
 
 .comments-dark .article-author {
