--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -309,6 +309,7 @@
 		&_sm {
 			margin-top: 210px;
 			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 			@include lg-block {
 				margin-top: 180px;
 			}
@@ -342,6 +343,7 @@
 				height: 209px;
 				border-radius: 5px;
 				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 			}
 			.content-titlebox {
 				color: #fbfbfb;
@@ -661,6 +663,7 @@
 			.card-third__content {
 				margin-top: 210px;
 				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 )
 			}
 		}
 		&-slider {
@@ -1208,7 +1211,7 @@
 	}
 	&__left {
 		float: left;
-		width: 320px;
+		width: 305px;
 		@include lg-block {
 			width: 210px;
 		}
