--- a/app/sass/_comment-dark.scss
+++ b/app/sass/_comment-dark.scss
@@ -32,6 +32,7 @@
 			background-color: #eeefef;
 			&:before {
 				background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #eeefef 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#eeefef',GradientType=0 );
 			}
 		}
 	}
