--- a/app/sass/_comment.scss
+++ b/app/sass/_comment.scss
@@ -173,6 +173,7 @@
 				width: 100%;
 				height: 91px;
 				background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 65%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 )
 			}
 			i {
 				margin-left: 5px;
