--- a/app/sass/_widget.scss
+++ b/app/sass/_widget.scss
@@ -114,6 +114,7 @@
 			padding: 25px 15px 15px;
 			font-size: 16px;
 			background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 			h3 {
 				margin-bottom: 3px;
 				font-family: "Roboto", sans-serif;
