--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -358,13 +358,16 @@
 	}
 	&__title {
 		min-height: 44px;
+		max-height: 45px;
 		margin-bottom: 15px;
 		font-family: "PT Serif", serif;
 		font-size: 17px;
 		@include md-block {
 			margin-bottom: 10px;
 			min-height: 30px;
+			max-height: 30px;
 			font-size: 9px;
+
 
 		}
 		@include xs-block {
@@ -374,10 +377,10 @@
       font-size: 38px;
 		}
 		a {
-			display: block;
-			max-height: 45px;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			//display: block;
+			//max-height: 45px;
+			//overflow: hidden;
+			//text-overflow: ellipsis;
 
 			@include hover {
 				text-decoration: underline;
