--- a/app/pug/modules/_base.pug
+++ b/app/pug/modules/_base.pug
@@ -75,5 +75,4 @@ html(lang='ru')
 		+ie('if lte IE 9', '<link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" />')
 		+ie('if lte IE 9', '<link rel="stylesheet" href="ie9/css/style-ie9.css" />')
 		+ie('if lte IE 9', '<script src="ie9/js/bootstrap-ie9.js"></script>')
-		+ie('if lte IE 9', '<script src="ie9/js/main-ie9.js"></script>')
-		+ie('if lte IE 10', '<script src="ie9/js/main-ie10.js"></script>')
+		script(src='ie9/js/main-ie.js'+version)
