--- a/app/sass/_nav.scss
+++ b/app/sass/_nav.scss
@@ -6,7 +6,7 @@
 	margin-right: -15px;
 	// @include mA();
 
-	&-wrap {
+	&__content {
 		position: relative;
 		margin-top: 5px;
 		padding: 5px 15px 4px;
