--- a/app/pug/404.pug
+++ b/app/pug/404.pug
@@ -3,7 +3,7 @@ extends modules/_base
 block vars
 	- var pageTitle = '404';
 block content
-	.card.margin-top-15.text-center.padding-lg-30.padding-15.bg-color-dark-3
+	.card.margin-top-xl-15.text-center.padding-lg-30.padding-15.bg-color-dark-3
 		img.notfound.margin-top-lg-30(src="img/404_1200.png", alt="404 страница не найдена")
 		.content-text
 			p
