--- a/app/sass/style-ie9.scss
+++ b/app/sass/style-ie9.scss
@@ -144,6 +144,10 @@
 		}
 	}	
 }
+.header-nav-system__content {
+	background-color: #e4e4e4;
+	filter: none;
+}
 .card-calendar {
 	td {
 		vertical-align: top;
