--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -395,7 +395,7 @@
 		position: relative;
 		display: flex;
 		flex-direction: column;
-		height: 100%;
+		//height: 100%;
 		font-family: "PT Serif", serif;
 		font-size: 16px;
 		font-weight: 400;
